# maildemo

public/: composer.html  error.html  inbox.html  login.html  register.html
public/res/: style.css
server/: Cargo.toml  data.db
server/src/: main.rs
server/src/database/: mod.rs
server/src/encryption/: auth.rs  cipher.rs  hasher.rs  mod.rs
server/src/types/: mod.rs
