[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = [ "cookie-session" ] }
actix-web = "4.2.1"
aes = "0.8.2"
cbc = { version = "0.1.2", features = [ "std" ] }
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenvy = "0.15.6"
futures = "0.3.25"
futures-util = "0.3.25"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
rand = "0.8.5"
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
uuid = "1.2.1"
